[package]
name = "embassy-dht"
version = "0.1.9"
edition = "2021"
keywords = ["DHTXX", "embassy",  "no_std", "RP2040", "RP2350"]
description = " This Rust library provides an interface for interacting with DHT1X and DHT2X temperature and humidity sensors using the Embassy framework."
repository = "https://github.com/sndnvaps/embassy-dht"
authors = ["Samuel Freeman <admin@sndnvaps.com>"]
documentation = "https://docs.rs/embassy-dht"
license = "MIT/Apache-2.0"


[features]
embedded_alloc = []

[dependencies]
embedded-hal = { version = "1.0.0" }
embassy-rp = {  version = "0.2.0",  git="https://github.com/embassy-rs/embassy", rev="ee669ee5c57851ade034beca7cfaf81825c4c21b",features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = { version = "0.3.2", git="https://github.com/embassy-rs/embassy",  rev="ee669ee5c57851ade034beca7cfaf81825c4c21b",features = ["defmt", "defmt-timestamp-uptime"] }
embassy-time-driver = {  version = "0.1.0", git="https://github.com/embassy-rs/embassy",  rev="ee669ee5c57851ade034beca7cfaf81825c4c21b"}


num-traits = { version = "0.2", default-features= false }

